--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "resend": "^4.2.0"
   }
 }
